login page with font awesome, fa-repeat, changed some css to fix div element behind navbar

--- a/public/css/register.css
+++ b/public/css/register.css
@@ -1,26 +1,34 @@
-table {
-  background-color:white;
-  padding: 20px 20px 20px 20px;
-  border-radius: 7px;
-  box-shadow: 1px 2px 12px 1px;
-  font-size: 150%;
+* {
+  box-sizing: border-box;
+}
+nav{
+  margin-bottom: 3%;
+  box-shadow: 0px 0px 15px 1px #696565;
+}
+.loading{
+  background-color:#dfdfe6;
+  text-align: center;
 }
 .container1{
       display: flex;
       flex:1 100%;
       flex-direction: column;
-      height: 70%;
-      width: 100%;
       align-items: center;
       justify-content: center;
+    }
+    form{
+      background-color:#fdfcf2;
+      padding: 20px 20px 20px 20px;
+      border-radius: 7px;
+      box-shadow: 2px 2px 10px 0px #b5b5b0;
+    }
+    body{
+      padding-top: 5.5rem;
     }
         h1 {
           color:;
         }
 
-table td {
-  color: blue;
-}
 html {
   background: #abbaab;  /* fallback for old browsers */
 background: -webkit-linear-gradient(to right, #ffffff, #abbaab);  /* Chrome 10-25, Safari 5.1-6 */
